# RevGAPI

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 1b6ffd69695b_updated_user_token_model.py  1cd97aefa6d4_create_users_and_apikey_table.py  889ff2842c6a_created_permission_model.py  aefa890003ce_added_verified_field_in_user.py  ce6ddf8b2196_created_token_model.py  ed7479bcd965_updated_user_token_reverse_join.py
src/api/v1/: router.py
src/config/: agents.py  database.py
src/core/: email.py  file_handler.py  jwt_auth.py  permissions.py
src/dependencies/: get_user.py  permissions.py  user_api_key.py
src/events/: __init__.py  api_key_events.py  create_token.py
src/models/: permission.py  users.py
src/prototypes/: jwt_payload.py
src/routers/: User_Routers.py
src/routers/Users/: User_Routers.py
src/schemas/: Output.py  User.py
src/scripts/: load_permissions.py
src/services/: Email.py  Users.py
src/services/users/: Users.py
src/templates/: forgot_password.html  verify_email.html
src/templates/loaders/: permissions.json
src/tests/: conftest.py  test_get_user.py  test_user_api_key.py
src/utils/: email.py  password.py
