[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
